# hermes

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  df_cleaner.ipynb  errors_r.txt  lt1_gen.ipynb  parfive_rclone_drive_extravaganza.py  pyproject.toml
current_downloads/: g.txt  i.txt  r.txt  u.txt  z.txt
hermes/: bz2_unzipper.sh  dataset_creator.py  dataset_creator_parallel.py  fetch_test_rows.py  fits_downloader.py  fits_to_np.py  move_files_within_drive.sh  post_unzip_df_filter.py  rsync_run.sh  sqlcl.py  url_generator.py
hermes/test_run/: data_check.ipynb  fetch_test_rows.py
hermes/try/: download_rsync.txt
ordered_100k/: .gitattributes  splitter.ipynb  wcs.ipynb
ordered_100k/extra_csv/extra_nb/: data.ipynb  match_photo_z.ipynb
